got the addtofavorites to work
but now i need to get the mapping to the favorites table correct

--- a/AnimalRefugeFinal/Views/Pet/ViewList.cshtml
+++ b/AnimalRefugeFinal/Views/Pet/ViewList.cshtml
@@ -52,9 +52,8 @@
                     </div>
                     <ul>
                     <form asp-action="Add" method="post">
-                        <a asp-action="Index" class="btn btn-primary"
-                            asp-route-pet="@pet">Return to Home Page</a>
-                            <button type="submit" class="btn btn-primary">Add to Favorites</button>
+                        <input type="hidden" name="Pet.Id" value="@pet.Id" />
+                        <button type="submit" class="btn btn-primary">Add to Favorites</button>
                     </form>
 
                     </ul>
