tag helpers and error handling

--- a/AnimalRefugeFinal/Views/Home/Adoption.cshtml
+++ b/AnimalRefugeFinal/Views/Home/Adoption.cshtml
@@ -1,4 +1,5 @@
-﻿<style>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<style>
     body {
         margin: 20px;
         text-align: center;
@@ -22,7 +23,7 @@
         If you have any questions or would like to apply for adoption, please feel free to contact us using the email below. Or call us using the number below.
     </p>
 
-    <p class="email"><strong>Email:</strong> adopt@animalrescueleauge.com</p>
+    <p class="email"><strong>Email:</strong> <a href="adopt@animalrescueleague.com">adopt@animalrescueleauge.com</a></p>
     <p class="phone"><strong>Phone Number</strong> (515) 355-3091</p>
 </section>
 
