--- a/AnimalRefugeFinal/Views/Admin/EditUser.cshtml
+++ b/AnimalRefugeFinal/Views/Admin/EditUser.cshtml
@@ -2,25 +2,15 @@
 
 <h2>Edit User</h2>
 
-<form asp-action="Edit" method="post">
+<form asp-action="EditUser" method="post">
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
         <label asp-for="UserName">Username</label>
-        <input asp-for="UserName" class="form-control" disabled />
+        <input asp-for="UserName" class="form-control"  />
     </div>
 
-    <div class="form-group">
-        <label asp-for="FirstName">First Name</label>
-        <input asp-for="FirstName" class="form-control" />
-        <span asp-validation-for="FirstName" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="LastName">Last Name</label>
-        <input asp-for="LastName" class="form-control" />
-        <span asp-validation-for="LastName" class="text-danger"></span>
-    </div>
+    
 
     <!-- Add other properties as needed -->
 
