--- a/AnimalRefugeFinal/Views/Account/Register.cshtml
+++ b/AnimalRefugeFinal/Views/Account/Register.cshtml
@@ -17,7 +17,7 @@
             <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
 
-        <div
+        <div>
             <label asp-for="LastName"></label>
             <input asp-for="LastName" class="form-control" />
             <span asp-validation-for="LastName" class="text-danger"></span>
